--- a/learner1.html
+++ b/learner1.html
@@ -398,19 +398,20 @@
             <h3>Now listen to your partner's explanation</h3>
             <p2>Pay attention to whether he/she has covered all the knowlege components below.</p2>
               <div class="kc">
-               <p3>How do microwaves affect water molecules?</p3>
+               <p3><input type="checkbox"><span class="checkmark"></span>
+How do microwaves affect water molecules?<span class="checkmark"></span></p3>
               </div>
               <div class="kc">
-               <p3>Why are water molecules being twisted? How does that produce heat?</p3>
+               <p3><input type="checkbox" class="checkboxkc">Why are water molecules being twisted? How does that produce heat?</p3>
               </div>
               <div class="kc">
-               <p3>How does a conventional oven work?</p3>
+               <p3><input type="checkbox" class="checkboxkc">How does a conventional oven work?</p3>
               </div>
               <div class="kc">
-               <p3>Why does a microwave cook food faster?</p3>
+               <p3><input type="checkbox" class="checkboxkc">Why does a microwave cook food faster?</p3>
               </div>
               <div class="kc">
-               <p3>Cooked in microwave oven, would food get brown or crispy? Why?</p3>
+               <p3><input type="checkbox" class="checkboxkc">Cooked in microwave oven, would food get brown or crispy? Why?</p3>
               </div>
             <a class="btn-continue" data-next="#scene-title-practice"><i class="far fa-play-circle"></i>Got Them</a>
           </div>
@@ -478,10 +479,10 @@
           <!-- 这里开始是前面每一kc的self-explanation -->
           <div id="scene-kc1" class="scene scene-answer">
             <h2>What did you learn?</h2>
-            <p>You will explain to your partner: <span class = "green">What is microwave?</span></p>
+            <p>You will explain to your partner: <br><span class = "green">What is microwave?</span></p>
             <p>Take notes here to help prepare for your teaching.</p>
             <div class="textbox-and-hint">
-              <textarea id="input-answer-kc1" class="input-answer narrower-inputbox" rows="2" placeholder="Explain in a way that you would explain it to your partner."></textarea>
+              <textarea id="input-answer-kc1" class="input-answer narrower-inputbox" rows="2" placeholder="Take notes here. You will use the notes to explain to your partner later."></textarea>
               <a id = "btn-hint1" class="btn-hint">Hint</a>
             </div>
             <a id = "btn-continue-kc1" class="btn-end btn-continue btn-disabled margin-top"><i class="fas fa-magic"></i>Continue</a>
@@ -489,7 +490,7 @@
 
           <div id="scene-kc2" class="scene scene-answer">
             <h2>What did you learn?</h2>
-            <p>You will explain to you partner two questions: <span class="green">1. What absorbs microwave and what does not? 2. Microwave oven will heat what but will not heat what?</span></p>
+            <p>You will explain to you partner two questions: <br><span class="green">1. What absorbs microwave and what does not?</span><br><span class="green"> 2. Microwave oven will heat what but will not heat what?</span></p>
             <p>Take notes here to help prepare for your teaching.</p>
             <div class="textbox-and-hint">
               <textarea id="input-answer-kc2" class="input-answer" rows="2" placeholder="Explain in a way that you would explain it to your partner."></textarea>
@@ -500,7 +501,7 @@
 
           <div id="scene-kc3" class="scene scene-answer">
             <h2>What did you learn?</h2>
-            <p>You will explain to your partner: <span class="green">To what content in the food does a microwave oven deliver cooking power primarily?</span></p>
+            <p>You will explain to your partner: <br><span class="green">To what content in the food does a microwave oven deliver cooking power primarily?</span></p>
             <p>Take notes here to help prepare for your teaching.</p>
             <div class="textbox-and-hint">
               <textarea id="input-answer-kc3" class="input-answer" rows="2" placeholder="Explain in a way that you would explain it to your partner."></textarea>
@@ -511,7 +512,7 @@
 
           <div id="scene-kc4" class="scene scene-answer">
             <h2>What did you learn?</h2>
-            <p>You will explain to your partner: <span class="green">Why do containers not get as hot as food inside them?</span></p>
+            <p>You will explain to your partner: <br><span class="green">Why do containers not get as hot as food inside them?</span></p>
             <p>Take notes here to help prepare for your teaching.</p>
             <div class="textbox-and-hint">
               <textarea id="input-answer-kc4" class="input-answer" rows="2" placeholder="Explain in a way that you would explain it to your partner."></textarea>
@@ -522,7 +523,7 @@
 
           <div id="scene-kc5" class="scene scene-answer">
             <h2>What did you learn?</h2>
-            <p>You will explain to your partner: <span class="green">Why you shouldn't use metal plates or foils in microwave ovens?</span></p>
+            <p>You will explain to your partner: <br><span class="green">Why you shouldn't use metal plates or foils in microwave ovens?</span></p>
             <p>Take notes here to help prepare for your teaching.</p>
             <div class="textbox-and-hint">
               <textarea id="input-answer-kc5" class="input-answer" rows="2" placeholder="Explain in a way that you would explain it to your partner."></textarea>
