--- a/learner2.html
+++ b/learner2.html
@@ -362,43 +362,33 @@ You may need to review your notes or the video before explaining to your partner
             <p2>You can read your own notes or look back to the corresponding video piece if you need.</p2>
             <div class="explanationline">
               <div class="self-explanation">
-               <p3 id="self-explanation-kc1">explanation explanation explanation</p3>
+               <p3 id="self-explanation-kc1"></p3>
               </div>
-              <a class="icon-play" data-next="#scene-video1">
-                Hint
-              </a>
+              <a class="btn-hintvideo" data-next="#scene-video1">Hint</a>
             </div>
             <div class="explanationline">
               <div class="self-explanation">
-               <p3 id="self-explanation-kc2">explanation explanation explanation</p3>
+               <p3 id="self-explanation-kc2"></p3>
               </div>
-              <a class="icon-play" data-next="#scene-video2">
-                Hint
-              </a>
+              <a class="btn-hintvideo" data-next="#scene-video2">Hint</a>
             </div>
             <div class="explanationline">
               <div class="self-explanation">
-               <p3 id="self-explanation-kc3">explanation explanation explanation</p3>
+               <p3 id="self-explanation-kc3"></p3>
               </div>
-              <a class="icon-play" data-next="#scene-video3">
-                Hint
-              </a>
+              <a class="btn-hintvideo" data-next="#scene-video3">Hint</a>
             </div>
             <div class="explanationline">
               <div class="self-explanation">
-               <p3 id="self-explanation-kc4">explanation explanation explanation</p3>
+               <p3 id="self-explanation-kc4"></p3>
               </div>
-              <a class="icon-play" data-next="#scene-video4">
-                Hint
-              </a>
+              <a class="btn-hintvideo" data-next="#scene-video4">Hint</a>
             </div>
             <div class="explanationline">
               <div class="self-explanation">
-               <p3 id="self-explanation-kc5">explanation explanation explanation</p3>
+               <p3 id="self-explanation-kc5"></p3>
               </div>
-              <a class="icon-play" data-next="#scene-video5">
-                Hint
-              </a>
+              <a class="btn-hintvideo" data-next="#scene-video5">Hint</a>
             </div>
 
             <a class="btn-continue" data-next="#scene-listen">
@@ -433,7 +423,7 @@ You may need to review your notes or the video before explaining to your partner
             <h4>Part1</h4>
             <iframe class="videopiece" src="https://youtube.com/embed/M0SUqGU8Ixk"></iframe>
               <div class="kcexplain">
-               <p3 id="video-kc1">self explanation1</p3>
+               <p3 id="video-kc1"></p3>
               </div>
           </div>
 
@@ -445,7 +435,7 @@ You may need to review your notes or the video before explaining to your partner
             <h4>Part2</h4>
             <iframe class="videopiece" src="https://youtube.com/embed/hNQ-mv7Sy8U"></iframe>
               <div class="kcexplain">
-               <p3 id="video-kc2">self explanation2</p3>
+               <p3 id="video-kc2"></p3>
               </div>
           </div>
 
@@ -457,7 +447,7 @@ You may need to review your notes or the video before explaining to your partner
             <h4>Part3</h4>
             <iframe class="videopiece" src="https://youtube.com/embed/friVqnneFu8"></iframe>
               <div class="kcexplain">
-               <p3 id="video-kc3">self explanation3</p3>
+               <p3 id="video-kc3"></p3>
               </div>
           </div>
 
@@ -469,7 +459,7 @@ You may need to review your notes or the video before explaining to your partner
             <h4>Part4</h4>
             <iframe class="videopiece" src="https://youtube.com/embed/SW_ZkoRedFs"></iframe>
               <div class="kcexplain">
-               <p3 id="video-kc4">self explanation4</p3>
+               <p3 id="video-kc4"></p3>
               </div>
           </div>
 
@@ -481,7 +471,7 @@ You may need to review your notes or the video before explaining to your partner
             <h4>Part5</h4>
             <iframe class="videopiece" src="https://youtube.com/embed/bppQuOyHnyw"></iframe>
               <div class="kcexplain">
-               <p3 id="video-kc5">self explanation5</p3>
+               <p3 id="video-kc5"></p3>
               </div>
           </div>
 
@@ -532,7 +522,7 @@ You may need to review your notes or the video before explaining to your partner
             <h2>What did you learn?</h2>
             <p>You will explain to your partner: <span class="green">Cooked in microwave oven, would food get brown or crispy? Why?</span></p>
             <div class="textbox-and-hint">
-              <textarea id="input-answer-kc5" class="input-answer" rows="4" placeholder="Explain in a way that you would explain it to your partner."></textarea>
+              <textarea id="input-answer-kc5" class="input-answer" rows="2" placeholder="Explain in a way that you would explain it to your partner."></textarea>
               <a id="btn-hint5" class="btn-hint">Hint</a>
             </div>
             <a id = "btn-continue-kc5" class="btn-end btn-continue btn-disabled margin-top"><i class="fas fa-magic"></i>Continue</a>
