--- a/learner1.html
+++ b/learner1.html
@@ -398,8 +398,7 @@
             <h3>Now listen to your partner's explanation</h3>
             <p2>Pay attention to whether he/she has covered all the knowlege components below.</p2>
               <div class="kc">
-               <p3><input type="checkbox"><span class="checkmark"></span>
-How do microwaves affect water molecules?<span class="checkmark"></span></p3>
+               <p3><input type="checkbox" class="checkboxkc">How do microwaves affect water molecules?</p3>
               </div>
               <div class="kc">
                <p3><input type="checkbox" class="checkboxkc">Why are water molecules being twisted? How does that produce heat?</p3>
@@ -413,7 +412,7 @@ How do microwaves affect water molecules?<span class="checkmark"></span></p3>
               <div class="kc">
                <p3><input type="checkbox" class="checkboxkc">Cooked in microwave oven, would food get brown or crispy? Why?</p3>
               </div>
-            <a class="btn-continue" data-next="#scene-title-practice"><i class="far fa-play-circle"></i>Got Them</a>
+            <a class="btn-continue btn-disabled" data-next="#scene-title-practice"><i class="far fa-play-circle"></i>Got Them</a>
           </div>
 
           <!-- video piece 1 -->
