--- a/learner2.html
+++ b/learner2.html
@@ -392,7 +392,7 @@ You may need to review your notes or the video before explaining to your partner
             </div>
 
             <a class="btn-continue" data-next="#scene-listen">
-              <i class="far fa-play-circle"></i>Continue</a>
+              <i class="far fa-play-circle"></i>Finished</a>
           </div>
           <div id="scene-listen" class="scene">
             <h3>Now listen to your partner's explanation</h3>
@@ -412,7 +412,7 @@ You may need to review your notes or the video before explaining to your partner
               <div class="kc">
                <p3>Why you shouldn't use metal plates or foils in microwave ovens?</p3>
               </div>
-            <a class="btn-continue" data-next="#scene-title-practice"><i class="far fa-play-circle"></i>Got Them</a>
+            <a class="btn-continue btn-listen btn-disabled" data-next="#scene-title-practice"><i class="far fa-play-circle"></i>Got Them</a>
           </div>
 
           <!-- video piece 1 -->
@@ -501,6 +501,7 @@ You may need to review your notes or the video before explaining to your partner
           <div id="scene-kc3" class="scene scene-answer">
             <h2>What did you learn?</h2>
             <p>You will explain to your partner: <span class="green">How does a conventional oven work?</span></p>
+            <p>Take notes here to help prepare for your teaching.</p>
             <div class="textbox-and-hint">
               <textarea id="input-answer-kc3" class="input-answer" rows="2" placeholder="Explain in a way that you would explain it to your partner."></textarea>
               <a id="btn-hint3" class="btn-hint">Hint</a>
@@ -511,6 +512,7 @@ You may need to review your notes or the video before explaining to your partner
           <div id="scene-kc4" class="scene scene-answer">
             <h2>What did you learn?</h2>
             <p>You will explain to your partner: <span class="green">Why does a microwave cook food faster?</span></p>
+            <p>Take notes here to help prepare for your teaching.</p>
             <div class="textbox-and-hint">
               <textarea id="input-answer-kc4" class="input-answer" rows="2" placeholder="Explain in a way that you would explain it to your partner."></textarea>
               <a id="btn-hint4" class="btn-hint">Hint</a>
@@ -521,6 +523,7 @@ You may need to review your notes or the video before explaining to your partner
           <div id="scene-kc5" class="scene scene-answer">
             <h2>What did you learn?</h2>
             <p>You will explain to your partner: <span class="green">Cooked in microwave oven, would food get brown or crispy? Why?</span></p>
+            <p>Take notes here to help prepare for your teaching.</p>
             <div class="textbox-and-hint">
               <textarea id="input-answer-kc5" class="input-answer" rows="2" placeholder="Explain in a way that you would explain it to your partner."></textarea>
               <a id="btn-hint5" class="btn-hint">Hint</a>
