--- a/learner1.html
+++ b/learner1.html
@@ -392,7 +392,7 @@
             </div>
 
             <a class="btn-continue" data-next="#scene-listen">
-              <i class="far fa-play-circle"></i>Continue</a>
+              <i class="far fa-play-circle"></i>Finished</a>
           </div>
           <div id="scene-listen" class="scene">
             <h3>Now listen to your partner's explanation</h3>
@@ -412,7 +412,7 @@
               <div class="kc">
                <p3><input type="checkbox" class="checkboxkc">Cooked in microwave oven, would food get brown or crispy? Why?</p3>
               </div>
-            <a class="btn-continue btn-disabled" data-next="#scene-title-practice"><i class="far fa-play-circle"></i>Got Them</a>
+            <a class="btn-continue btn-disabled btn-listen" data-next="#scene-title-practice"><i class="far fa-play-circle"></i>Got Them</a>
           </div>
 
           <!-- video piece 1 -->
