Great UI changes!

--- a/learner1.html
+++ b/learner1.html
@@ -392,7 +392,7 @@
             </div>
 
             <a class="btn-continue" data-next="#scene-listen">
-              <i class="far fa-play-circle"></i>Finished</a>
+              <i class="far fa-check-circle"></i>Finished</a>
           </div>
           <div id="scene-listen" class="scene">
             <h3>Now listen to your partner's explanation</h3>
