--- a/learner2.html
+++ b/learner2.html
@@ -392,27 +392,27 @@ You may need to review your notes or the video before explaining to your partner
             </div>
 
             <a class="btn-continue" data-next="#scene-listen">
-              <i class="far fa-play-circle"></i>Finished</a>
+              <i class="far fa-check-circle"></i>Finished</a>
           </div>
           <div id="scene-listen" class="scene">
             <h3>Now listen to your partner's explanation</h3>
             <p2>Pay attention to whether he/she has covered all the knowlege components below.</p2>
               <div class="kc">
-               <p3>What is microwave?</p3>
+               <p3><input type="checkbox" class="checkboxkc">What is microwave?</p3>
               </div>
               <div class="kc">
-               <p3>Why microwave oven essentially only heats the food?</p3>
+               <p3><input type="checkbox" class="checkboxkc">Why microwave oven essentially only heats the food?</p3>
               </div>
               <div class="kc">
-               <p3>Microwave ovens deliver cooking power primarily to what material in the food?</p3>
+               <p3><input type="checkbox" class="checkboxkc">Microwave ovens deliver cooking power primarily to what material in the food?</p3>
               </div>
               <div class="kc">
-               <p3>Why do containers not get as hot as food inside them?</p3>
+               <p3><input type="checkbox" class="checkboxkc">Why do containers not get as hot as food inside them?</p3>
               </div>
               <div class="kc">
-               <p3>Why you shouldn't use metal plates or foils in microwave ovens?</p3>
+               <p3><input type="checkbox" class="checkboxkc">Why you shouldn't use metal plates or foils in microwave ovens?</p3>
               </div>
-            <a class="btn-continue btn-listen btn-disabled" data-next="#scene-title-practice"><i class="far fa-play-circle"></i>Got Them</a>
+            <a class="btn-continue btn-listen btn-disabled" data-next="#scene-title-practice"><i class="far fa-check-circle"></i>Got Them</a>
           </div>
 
           <!-- video piece 1 -->
@@ -478,7 +478,7 @@ You may need to review your notes or the video before explaining to your partner
           <!-- 这里开始是前面每一kc的self-explanation -->
           <div id="scene-kc1" class="scene scene-answer">
             <h2>What did you learn?</h2>
-            <p>You will explain to your partner: <span class = "green">How do microwaves affect water molecules?</span></p>
+            <p>You will explain to your partner: <br><span class = "green">How do microwaves affect water molecules?</span></p>
             <p>Take notes here to help prepare for your teaching.</p>
             <div class="textbox-and-hint">
               <textarea id="input-answer-kc1" class="input-answer" rows="2" placeholder="Explain in a way that you would explain it to your partner."></textarea>
@@ -489,7 +489,9 @@ You may need to review your notes or the video before explaining to your partner
 
           <div id="scene-kc2" class="scene scene-answer">
             <h2>What did you learn?</h2>
-            <p>You will explain to your partner: <span class="green">1. Why are water molecules being twisted? 2. How does that produce heat?</span></p>
+            <p>You will explain to your partner: 
+              <br><span class="green">1. Why are water molecules being twisted?</span>
+              <br><span class="green"> 2. How does that produce heat?</span></p>
             <p>Take notes here to help prepare for your teaching.</p>
             <div class="textbox-and-hint">
               <textarea id="input-answer-kc2" class="input-answer" rows="2" placeholder="Explain in a way that you would explain it to your partner."></textarea>
@@ -500,7 +502,7 @@ You may need to review your notes or the video before explaining to your partner
 
           <div id="scene-kc3" class="scene scene-answer">
             <h2>What did you learn?</h2>
-            <p>You will explain to your partner: <span class="green">How does a conventional oven work?</span></p>
+            <p>You will explain to your partner: <br><span class="green">How does a conventional oven work?</span></p>
             <p>Take notes here to help prepare for your teaching.</p>
             <div class="textbox-and-hint">
               <textarea id="input-answer-kc3" class="input-answer" rows="2" placeholder="Explain in a way that you would explain it to your partner."></textarea>
@@ -511,7 +513,7 @@ You may need to review your notes or the video before explaining to your partner
 
           <div id="scene-kc4" class="scene scene-answer">
             <h2>What did you learn?</h2>
-            <p>You will explain to your partner: <span class="green">Why does a microwave cook food faster?</span></p>
+            <p>You will explain to your partner: <br><span class="green">Why does a microwave cook food faster?</span></p>
             <p>Take notes here to help prepare for your teaching.</p>
             <div class="textbox-and-hint">
               <textarea id="input-answer-kc4" class="input-answer" rows="2" placeholder="Explain in a way that you would explain it to your partner."></textarea>
@@ -522,7 +524,7 @@ You may need to review your notes or the video before explaining to your partner
 
           <div id="scene-kc5" class="scene scene-answer">
             <h2>What did you learn?</h2>
-            <p>You will explain to your partner: <span class="green">Cooked in microwave oven, would food get brown or crispy? Why?</span></p>
+            <p>You will explain to your partner: <br><span class="green">Cooked in microwave oven, would food get brown or crispy? Why?</span></p>
             <p>Take notes here to help prepare for your teaching.</p>
             <div class="textbox-and-hint">
               <textarea id="input-answer-kc5" class="input-answer" rows="2" placeholder="Explain in a way that you would explain it to your partner."></textarea>
