--- a/learner1.html
+++ b/learner1.html
@@ -47,8 +47,10 @@
             <p >You got <span id="final-score" class="big-score">76</span>/8 points in total.</p>
             <p>You got <span id="l1-score" class="big-score">76</span>/4 points on the video you watched.</p>
             <p>You got <span id="l2-score" class="big-score">76</span>/4 points on the part your partner told you!</p>
-            <p id="col-feedback">You are collaborating with your partner well and being helpful to each other!</p>
-            <p>You may want to check feedbacks of the questions and discuss with your partner on any furthur ambiguity.</p>
+            <p>
+              <span id="col-feedback">You are collaborating with your partner well and being helpful to each other!</span>
+              You may want to check feedbacks of the questions and discuss with your partner on any furthur ambiguity.
+            </p>
             <a class="btn-continue" data-next="#scene-question-1"><i class="fas fa-arrow-circle-right"></i>Feedback</a>
           </div>
 
@@ -359,7 +361,7 @@
           <!-- Explanation -->
           <div id="scene-explain" class="scene">
             <h3><i class="far fa-comments"></i>Now explain to your partner what you just learned</h3>
-            <p2>You can read your own notes or look back to the corresponding video piece if you need.</p2>
+            <p2>You can refer to your own notes or look back to the corresponding video pieces when needed.</p2>
             <div class="explanationline">
               <div class="self-explanation">
                <p3 id="self-explanation-kc1"></p3>
