--- a/learner1.html
+++ b/learner1.html
@@ -543,7 +543,7 @@
       </main>
 
       <footer>
-        <p class="copyright">&copy; 2019. A Work Crafted by Yihong Shi &amp; Canhai Chen</p>
+        <p class="copyright">&copy; 2019. A Work Crafted by Yihong Shi &amp; Wei Gong &amp; Canhai Chen</p>
       </footer>
     </div>
 
