--- a/learner2.html
+++ b/learner2.html
@@ -494,7 +494,7 @@ You may need to review your notes or the video before explaining to your partner
 
           <div id="scene-kc2" class="scene scene-answer">
             <h2>What did you learn?</h2>
-            <p>You will explain to your partner: 
+            <p>You will explain to your partner:
               <br><span class="green">1. Why are water molecules being twisted?</span>
               <br><span class="green"> 2. How does that produce heat?</span></p>
             <p>Take notes here to help prepare for your teaching.</p>
@@ -547,7 +547,7 @@ You may need to review your notes or the video before explaining to your partner
       </main>
 
       <footer>
-        <p class="copyright">&copy; 2019. A Work Crafted by Yihong Shi &amp; Canhai Chen</p>
+        <p class="copyright">&copy; 2019. A Work Crafted by Yihong Shi &amp; Wei Gong &amp;Canhai Chen</p>
       </footer>
     </div>
 
