--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
             <a class="btn-continue" href="learner1.html">I am learner 1</a>
             <a class="btn-continue" href="learner2.html">I am learner 2</a>
       </div>
-
+    <footer>
+        <p class="copyright">&copy; 2019. A Work Crafted by Yihong Shi, Wei Gong &amp; Canhai Chen</p>
+    </footer>
 
 
 
