--- a/learner2.html
+++ b/learner2.html
@@ -26,7 +26,7 @@
               <i class="fas fa-book"></i>
             </div>
             <h2>Are You Ready?</h2>
-            <p>This is a collaborative course about how microwaves work. You and your partner will be assigned to learn different knowlege related to the topic. After watching the video, you need to explain to your patner what you have learned, and also listen to your partner's explanation. After that, you will take test individually about all the knowlege covered. Click start to begin our wonderful journey!</p>
+            <p>This is a collaborative course about how microwaves work. You and your partner will be assigned to learn different knowlege related to the topic. After watching the video, you will explain to your patner what you have learned, and also listen to your partner's explanation. After that, you will take test individually about all the knowlege covered. Remember, You and you partner can only get a good grade by relying on each other. Click start to begin our wonderful journey!</p>
             <a class="btn-start"><i class="far fa-play-circle"></i>Start</a>
           </div>
 
@@ -549,11 +549,7 @@ You may need to review your notes or the video before explaining to your partner
       </main>
 
       <footer>
-<<<<<<< HEAD
         <p class="copyright">&copy; 2019. A Work Crafted by Yihong Shi, Wei Gong &amp; Canhai Chen</p>
-=======
-        <p class="copyright">&copy; 2019. A Work Crafted by Yihong Shi &amp; Wei Gong &amp;Canhai Chen</p>
->>>>>>> 8364de727b6ec861d502b30c19d54a8cbd58576d
       </footer>
     </div>
 
