--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p2>This is a collaborative course about how microwaves work. You and your partner will be assigned to learn different knowlege related to the topic. After watching the video, you need to explain to your partner what you have learned, and also listen to your partner's explanation. After that, you will take test individually about all the knowlege covered. Click start to begin our wonderful journey!<br><br>Make sure you and your partner choose different learners</p2>
 
             <a class="btn-continue" href="learner1.html">I am learner 1</a>
-            <a class="btn-continue" href="learner2.html">I am learner 2</a>
+            <a class="btn-continue narrow-top" href="learner2.html">I am learner 2</a>
       </div>
     <footer>
         <p class="copyright">&copy; 2019. A Work Crafted by Yihong Shi, Wei Gong &amp; Canhai Chen</p>
