--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div id="scene-landing" class="scene">
             <h3>Choose a part to learn</h3>
             <p2>This is a collaborative course about how microwaves work. You and your partner will be assigned to learn different knowlege related to the topic. After watching the video, you need to explain to your partner what you have learned, and also listen to your partner's explanation. After that, you will take test individually about all the knowlege covered. Click start to begin our wonderful journey!<br><br>Make sure you and your partner choose different options.</p2>
-            <p class="small">This website works the best in chrome. Also, Grammarly extention will cause weird effect on the text boxes so we would suggest turning off Grammarly to test it.</p>
+            <p class="small">This website works best in Chrome.</p>
 
             <a class="btn-continue" href="learner1.html">I am learner 1</a>
             <a class="btn-continue narrow-top" href="learner2.html">I am learner 2</a>
